--- a/pom.xml
+++ b/pom.xml
@@ -125,12 +125,12 @@
       <artifactId>mockito-junit-jupiter</artifactId>
       <scope>test</scope>
     </dependency>
-<!--    <dependency>-->
-<!--      <groupId>org.mockito</groupId>-->
-<!--      <artifactId>mockito-all</artifactId>-->
-<!--      <version>1.10.19</version>-->
-<!--      <scope>test</scope>-->
-<!--    </dependency>-->
+   <dependency>
+     <groupId>org.mockito</groupId>
+     <artifactId>mockito-all</artifactId>
+     <version>1.10.19</version>
+     <scope>test</scope>
+    </dependency>
 
 
     <dependency>
